<resources>

    <!-- app name -->
    <string name="app_name">Teach Me</string>
    <string name="tagline">Learn - Fun - Tutorial</string>

    <!-- app ad section -->
    <string name="app_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rewarded_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <!-- end of the ad section -->


    <string name="privacy_url">https://docs.google.com/document/d/1EqcU0xmBs1o69w18JIX7BNIFjD0m6IL7nf8f_P5RQaQ/edit?usp=sharing</string>
    <string name="faq_url">https://docs.google.com/document/d/1EqcU0xmBs1o69w18JIX7BNIFjD0m6IL7nf8f_P5RQaQ/edit?usp=sharing</string>
    <string name="developer_page">fill me</string>
    <string name="alternate_dev_page">fill me</string>

    <!-- about developer text  -->
    <string name="developer_name">Aleksandr Soloninov</string>
    <string name="developer_detail">Germany, Lampertheim-Hofheim</string>

    <string name="developer_message">Teach Me - is an Android app built as part of a master thesis
        for students at many universities. The app should serve as a tutor, or rather replace
        a tutor. With the help of this app, students should improve their knowledge.

                                     Engine: 2.9.1
                                     Lectures 0.0.1
                                     Exam 0.0.1
                                     Interview 0.0.1
                                     Video 0.0.1
    </string>

    <string name="site_menu_fav">Favorites</string>
    <string name="site_menu_delete_all">Delete All</string>
    <string name="site_menu_read_article">Read Article</string>
    <string name="site_menu_stop_reading">Stop Reading</string>
    <string name="tts_wait_msg">This article will be read in short. Please wait a while</string>
    <string name="tts_install_msg">Please install Language package from here</string>
    <string name="delete_all_fav_item">Do you want to Delete all the Favorite items?</string>
    <string name="delete_fav_item">Do you want to remove this item from the Favorite list?</string>
    <string name="delete_all_notification">Do you want to Delete all the Notifications?</string>
    <string name="site_menu_quiz">Quiz</string>

    <string name="others">Others</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="modules">Modules</string>
    <string name="privacy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="rate">Rate App</string>
    <string name="settings">Settings</string>
    <string name="about_dev">About Developer</string>
    <string name="exit">Exit</string>
    <!-- end of the site configuration section-->

    <string name="search">Search</string>

    <string name="rate_title">Rate This App</string>
    <string name="rate_message">If you enjoy using this app, would you mind taking a moment to rate it 5 stars?
    It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_positive">rate now</string>
    <string name="rate_remind_later">Later</string>
    <string name="rate_never">No, Thanks</string>
    <string name="empty_result">No data!</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="tapAgain">Tap again to exit!</string>
    <string name="permission_not_granted">Permission not granted!</string>

    <string name="share_text">Install Tutorial App from:</string>
    <string name="send_to">Send To: </string>
    <string name="copy_to_clipboard">Copied to Clipboard!</string>
    <string name="added_to_fav">This topic is added to Favorite list!</string>
    <string name="removed_from_fav">This topic is removed from Favorite List!</string>

    <string name="close_prompt">Are you sure you want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed">Failed</string>
    <string name="skip_prompt">Do you want to skip this question?</string>
    <string name="quiz_close_prompt">Do you want to quit the game?</string>

    <string name="greeting_text1">Oops!! Your score is not very good!! You need to study more.</string>
    <string name="greeting_text2">Not bad!! Keep learning and make yourself better.</string>
    <string name="greeting_text3">Excellent!! You are the boss!!</string>

    <string name="score_card">Score Card</string>
    <string name="score">Score</string>
    <string name="wrong">Wrong</string>
    <string name="skipped">Skipped</string>
    <string name="share_prompt">Share your score with friends!</string>
    <string name="share_now">Share Now</string>
    <string name="sharing_text" formatted="false">My Score is %d. Find Yours- </string>
    <string name="play_again">Play Again</string>
    <string name="your_ans">Your Ans:</string>
    <string name="correct_ans">Correct Ans:</string>

    <string name="details_text">Details</string>
    <string name="skip_text">Skip</string>
    <string name="next_question">Next Question</string>
    <string name="skipped_text">You skipped this question.</string>
    <string name="item_counter" formatted="false">%d / %d</string>
    <string name="welcome_text">Choose a module for the quiz</string>
    <string name="ready_prompt">Ready?</string>
    <string name="quiz_prompt">Quiz Prompt</string>
    <string name="reward_dialog_title">Get Rewarded</string>
    <string name="reward_dialog_message">Do you want to have extra lives by watching videos?</string>
    
    <string name="placeholder">..</string>
    <string name="notifications">Notifications</string>
    <string name="read_post">Read Post</string>
    <string name="notification_title">Notification title: </string>
    <string name="notification_details">Notification details: </string>


    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summ">Turn on/off notification</string>
    <string name="pref_text_title">Text size</string>
    <string name="select_size">Select text size</string>
    <string name="pref_widescreen_title">Widescreen</string>
    <string name="pref_widescreen_summ">Turn on/off widescreen</string>

    <string name="small_text">Small</string>
    <string name="default_text">Normal</string>
    <string name="large_text">Large</string>

    <string name="quest_selector_1">quest_selector_1</string>
    <string name="quest_selector_2">quest_selector_2</string>
    <string name="quest_selector_3">quest_selector_3</string>

    <string name="content_selector_button_title">Computer Science</string>
    <string name="content_selector_1">Computer Science::1</string>
    <string name="content_selector_2">Scripts::2</string>

    <string name="site_menu_Q_A">Question and Answer</string>
    <string name="site_menu_lectures">Lectures</string>
    <string name="site_menu_video">Video Tutorial</string>

    <string name="app_mode_1">Lectures</string>
    <string name="app_mode_2">Question and Answer</string>
    <string name="app_mode_3">Video Tutorial</string>

    <string name="textsize_small">Text size is small</string>
    <string name="textsize_normal">Text size is normal</string>
    <string name="textsize_large">Text size is large</string>
    <string name="notification_true">Notification turn on</string>
    <string name="notification_false">Notification turn off</string>
    <string name="widescreen_true">Widescreen turn on</string>
    <string name="widescreen_false">Widescreen turn off</string>

    <string name="default_language">English</string>
    <string name="language_english">English</string>
    <string name="language_german">German</string>
    <string name="language_russian">Russian</string>
    <string name="select_language">Select language</string>
    <string name="pref_language_title">Content language</string>

    <string name="first_time">First time: default value</string>

</resources>